# houdini-vex-vscode-extension

./: .gitignore  README.md  houdini-vex-0.0.4.vsix  package-lock.json  package.json  webpack.config.js
completions/: functions.txt
exe/: exe外部用法.txt
exe/src/: CMakeLists.txt  main.cpp
src/common/: common.ts
test_vex_txt/: cnk_R.txt  factorial_R.txt  getsystemtime_R.txt  linecircleintersect_R.txt  linelineintersect_R.txt  lineplaneintersect_R.txt  linepointdistance_R.txt  prt_R.txt  randrange_R.txt  rotate_Rodrigues_R.txt  segmentpointdistance2_R.txt  segmentsegmentdistance_R.txt  segmentsegmentintersect_R.txt
